--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -2,7 +2,7 @@
 layout: default
 image: /images/fulls/01.jpg
 ---
-<!-- This loops through the paginated posts -->
+<!-- port -->
 {% for post in paginator.posts %}
   <section>
     <h2><a href="{{ post.url | prepend: site.github.url }}">{{ post.title }}</a></h2>
