--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -3,7 +3,7 @@ layout: default
 image: /images/fulls/01.jpg
 ---
 <!-- port -->
-{% for post in paginator.posts %}
+{% for post in site.categories.Portfolio %}
   <section>
     <h2><a href="{{ post.url | prepend: site.github.url }}">{{ post.title }}</a></h2>
     <p>
